// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works as expected "@testing-library/react" 1`] = `
._324Crd {
  color: #f00;
}

<div>
  <div class="_324Crd">test component</div>
</div>
`;

exports[`works as expected with "react-test-renderer" 1`] = `
._324Crd {
  color: #f00;
}

<div className="_324Crd">test component</div>
`;
